tests/baselines/reference/project/extReferencingExtAndInt/amd/extReferencingExtAndInt.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== internal.ts (0 errors) ====
    namespace outer {
    	export var b = "foo";
    }
==== external2.ts (0 errors) ====
    export function square(x: number) {
    	return (x * x);
    }
==== external.ts (0 errors) ====
    ///<reference path="internal.ts" />
    import a = require("external2");
    
    outer.b = "bar";
    var c = a.square(5);